@@ -144,7 +144,6 @@ void init_random(int seed, int num_io_RNGs, lbann_comm *comm) {
     get_fast_generator().seed(seed);
 #endif
 
-#ifdef LBANN_SET_EL_RNG
     // Set Elemental's RNG seed
     auto elemental_seed = hash_combine(seed, 104729); // 10000th prime
     int mpi_initialized = 0;
@@ -159,8 +158,6 @@ void init_random(int seed, int num_io_RNGs, lbann_comm *comm) {
                         : hash_combine(elemental_seed, comm->get_rank_in_trainer()));
     }
     El::Generator().seed(elemental_seed);
-#endif
-
   } else {
     // Seed with a random value.
     std::random_device rd;
@@ -175,9 +172,7 @@ void init_random(int seed, int num_io_RNGs, lbann_comm *comm) {
     get_generator().seed(rand_val);
     get_fast_generator().seed(rand_val);
 #endif
-#ifdef LBANN_SET_EL_RNG
     El::Generator().seed(rand_val);
-#endif
   }
 
   init_io_random(seed, num_io_RNGs);
